# shitty-statistics

./: LICENSE  README.md  shitty-statistics.cabal
src/Statistics/: Shitty.hs
src/Statistics/Shitty/: Regression.hs
