name:                shitty-statistics
version:             0.1.0.0
synopsis:            Like statistics, but more shit.
description:         Please see README.md
homepage:            http://github.com/tranma/shitty-statistics#readme
license:             BSD3
license-file:        LICENSE
author:              Tran Ma
maintainer:          tran@defma.in
copyright:           Tran Ma, 2015
category:            Statistics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Statistics.Shitty
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite shitty-statistics-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , shitty-statistics
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tranma/shitty-statistics
